# FileEncryptor

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/tk/stystudio/fileencryptor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/tk/stystudio/fileencryptor/: MainActivity.java
app/src/test/java/tk/stystudio/fileencryptor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
